-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.2, 5.10.0 Beta 1
-
None
-
KDE Neon
-
c0a069904d6dd1495084e4c69dd639dad14fdedd
The following qml code will crash the application during init, when using the mapboxgl plugin
The reason is that the MapPolygon path is empty.
import QtQuick 2.8 import QtQuick.Window 2.2 import QtPositioning 5.8 import QtLocation 5.9 Window { visible: true width: 640 height: 480 Map { anchors.fill: parent plugin: Plugin { name: "mapboxgl" } center: QtPositioning.coordinate(60,10); MapPolygon { } } }
| For Gerrit Dashboard: QTBUG-63926 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 209329,4 | Check if coordinates are non-empty before repeating the first entry | 5.9 | qt/qtlocation | Status: MERGED | +2 | 0 |