Check if coordinates are non-empty before repeating the first entry

Task-number: QTBUG-63926
Change-Id: Ic57090dbc78705893280e040e5b4556cf296f949
Reviewed-by: Paolo Angelelli <paolo.angelelli@qt.io>